# personal-ai-assistant

./: .gitignore  pyproject.toml
src/: main.py
src/client/: telegram_bot.py
src/clients/: models.py  openai_client.py  tavily_search.py  telegram_bot.py
src/core/: constants.py  exceptions.py  result.py  settings.py
src/database/: connection.py  models.py  repository.py
src/utils/: token_manager.py
tests/: conftest.py  test_telegram_bot.py
tests/integration/: test_conversation_flow.py  test_imagine_command.py  test_voice_processing.py
tests/unit/: test_image_generation.py  test_openai_client.py  test_result.py  test_telegram_utils.py  test_token_manager.py
