[tool.poetry]
name = "personal-ai-assistant"
version = "0.1.0"
description = ""
authors = ["gczarny <grzegorz.czarny93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.0"
python-telegram-bot = "^21.10"
black = "^25.1.0"
loguru = "^0.7.3"
openai = "^1.64.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
